Bug 508352 - Zooming in and out may break visual rendering of selections, tree structure, icons and filenames
Summary: Zooming in and out may break visual rendering of selections, tree structure, ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.08.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-16 16:00 UTC by postix
Modified: 2025-09-25 16:53 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.12
Sentry Crash Report:


Attachments
Screenshot. (60.93 KB, image/png)
2025-08-16 16:00 UTC, postix
Details
Screenshot (59.14 KB, image/png)
2025-08-16 16:01 UTC, postix
Details
Screenshot 2: Zoomed out (38.37 KB, image/png)
2025-08-16 16:03 UTC, postix
Details
Screenshot 3: Fully zoomed out (35.36 KB, image/png)
2025-08-16 16:04 UTC, postix
Details
Screenshot 4: Fully zoomed out and selected all (34.00 KB, image/png)
2025-08-16 16:06 UTC, postix
Details
Screenshot 5: Blurred icons (38.87 KB, image/png)
2025-08-16 16:16 UTC, postix
Details
Screenshot 6: Compact Mode (13.40 KB, image/png)
2025-08-16 16:44 UTC, postix
Details
symbolic icons are broken after zooming in / out (95.13 KB, image/png)
2025-08-18 18:45 UTC, Efe Ciftci
Details
size of selection background is incorrect after zooming in / out (130.96 KB, video/mp4)
2025-08-18 18:58 UTC, Efe Ciftci
Details
Screenshot: Dolphin 25.08.1 (210.28 KB, image/png)
2025-09-25 15:55 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2025-08-16 16:00:34 UTC
Created attachment 184151 [details]
Screenshot.

SUMMARY

Depending on the zoom level, the file's or folder's icon may overflow the selection
Please see the screenshot.

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Kernel Version: 6.15.10-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Scaling: 1.25
Comment 1 postix 2025-08-16 16:01:47 UTC
Created attachment 184152 [details]
Screenshot

Maximally zoomed in.
Comment 2 postix 2025-08-16 16:03:29 UTC
Created attachment 184153 [details]
Screenshot 2: Zoomed out

When zoomed out, the selection was covered partly by elements around.
Comment 3 postix 2025-08-16 16:04:04 UTC
Also the tree structure looks broken in the last screenshot.
Comment 4 postix 2025-08-16 16:04:56 UTC
Created attachment 184154 [details]
Screenshot 3: Fully zoomed out
Comment 5 postix 2025-08-16 16:06:12 UTC
Created attachment 184155 [details]
Screenshot 4: Fully zoomed out and selected all

This is weird! :)
Comment 6 postix 2025-08-16 16:08:42 UTC
Steps to reproduce: 

1. Create a tree structure as shown in the screenshots:

Folder1
  |___ File1
Folder2
  |___File2
Folder3
  |___File3

2. Zoom fully in

3. Select the Folder1

4. Zoom out and in again
Comment 7 postix 2025-08-16 16:16:25 UTC
Created attachment 184157 [details]
Screenshot 5: Blurred icons

Apparently, when doing it "right" and zooming in, you might even get blurred icons. Hooray! :)
Comment 8 postix 2025-08-16 16:44:59 UTC
Created attachment 184162 [details]
Screenshot 6: Compact Mode

Apparently similar things can also happen for the compact mode, when zooming in and back out again.
Comment 9 Efe Ciftci 2025-08-18 18:45:23 UTC
Created attachment 184221 [details]
symbolic icons are broken after zooming in / out

I confirm this bug affects me as well.

Two things to add:
1. After triggering the icons to switch from symbolic to color versions by zooming in (see (a) -> (b) in the attached screenshot), they are not reverted back to their symbolic versions when zoomed out back ((b) -> (c)).
2. After zooming out from larger icons, the extra padding added in between the expansion markers and the icons themselves stays in its place (compare (a) with (c)).
Comment 10 Efe Ciftci 2025-08-18 18:58:16 UTC
Created attachment 184223 [details]
size of selection background is incorrect after zooming in / out

Zooming in (at least enough to make icons switch from symbolic to color) and out causes the selection background to stay incorrectly large. After this is triggered, navigating between icons using arrow keys cause phantom backgrounds to be drawn behind each traversed icon.
Comment 11 Bug Janitor Service 2025-08-25 11:38:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1030
Comment 12 Felix Ernst 2025-08-26 13:21:51 UTC
Git commit 2ff301735ed4707a303186e5db4971a51400335b by Felix Ernst, on behalf of Akseli Lahtinen.
Committed on 26/08/2025 at 12:42.
Pushed by felixernst into branch 'master'.

KItemListView: Check if animation is already started before starting new one

When user changes the zoom rapidly, we start the animation multiple
times, which causes delays with the animation and the icon size
is wrong for a while until user interaction refreshes the view.

This change runs the animation only when it's been finished, and
avoids the issue with the refresh. Instead in those situations,
we know that user is doing something really rapidly, so we
should just set the icon size to what it needs to be.

M  +1    -1    src/kitemviews/kitemlistview.cpp

https://invent.kde.org/system/dolphin/-/commit/2ff301735ed4707a303186e5db4971a51400335b
Comment 13 Felix Ernst 2025-08-26 13:21:59 UTC
Git commit 8d511bff97c844ef2eeef2656dcd42eb1b647e03 by Felix Ernst, on behalf of Akseli Lahtinen.
Committed on 26/08/2025 at 12:42.
Pushed by felixernst into branch 'master'.

KStandardItemListWidget: Use styleOption().iconSize

We should use styleOption().iconSize instead of iconSize(), since
the styleOption returns always the correct size depending on
if we are showing previews or not.

In DolphinItemListView we set the iconSize based on the
previewSize or iconSize, and the styleOption().iconSize is
whichever value it is here.

KItemListWidget::iconSize always returns the settings.iconSize

M  +8    -8    src/kitemviews/kstandarditemlistwidget.cpp
M  +1    -0    src/views/dolphinfileitemlistwidget.cpp

https://invent.kde.org/system/dolphin/-/commit/8d511bff97c844ef2eeef2656dcd42eb1b647e03
Comment 14 postix 2025-09-25 15:55:11 UTC
Created attachment 185267 [details]
Screenshot: Dolphin 25.08.1

Sorry that I need to reopen, but I still see the issue, when I select folders/files and zoom out quickly with the mouse wheel.
Comment 15 Efe Ciftci 2025-09-25 16:48:25 UTC
These issues are indeed fixed with [1] but as far as I know it has been merged into master. I wonder if it would be possible to cherry pick this bugfix into 25.08.x so we don't have to wait until 25.12?

[1] https://invent.kde.org/system/dolphin/-/merge_requests/1030
Comment 16 postix 2025-09-25 16:52:49 UTC
Oh, indeed, they have not been cherry picked to 25.08